--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body {
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(255, 150, 4);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(61, 61, 65)5);
 }
