--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,18 @@
 body {
     color: white;
-    background: rgb(0, 0, 0)0, 10, 10);
+    background: rgba(255, 85, 0, 0.984);
     margin: 0px;
 }
 
 header {
-    border-bottom: solid 2px hwb(31 0% 0%), 0.993)));
+    border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 32px;
-    color: rgb(40, 42, 45);
+    color: rgb(255, 119, 0);
 }
 
 section {
-	background: rgb(0, 0, 0));
+	background: rgb(0, 0, 0);
 	padding-bottom: 80px;
 	padding-top: 80px;
 	display: flex;
