--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body {
-    color: white;
+    color: rgb(255, 85, 0);
     background: rgba(255, 85, 0, 0.984);
     margin: 0px;
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(10, 10, 10)
     padding: 20px;
     font-size: 32px;
     color: rgb(255, 119, 0);
