--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     color: rgb(255, 85, 0);
     background: rgba(255, 85, 0, 0.984);
-    margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 header {
