--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,13 @@ body {
 }
 
 header {
-    border-bottom: solid 2px rgb(10, 10, 10)
+    border-bottom: solid 2px rgb(10, 10, 10);
     padding: 20px;
     font-size: 32px;
     color: rgb(255, 119, 0);
 }
 
-section {
+.chamada {
 	background: rgb(0, 0, 0);
 	padding-bottom: 80px;
 	padding-top: 80px;
@@ -21,4 +21,27 @@ section {
 
 .chamada-texto {
     margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
+
+img {
+    height: 200px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
 }
